[gd_scene load_steps=8 format=3 uid="uid://c38wnspfppg2o"]

[ext_resource type="Texture2D" uid="uid://ci8a0i5x20c8d" path="res://resources/free-pixel-art-enemy-spaceship-2d-sprites/Shot3/shot3_1.png" id="1_d2u57"]
[ext_resource type="Script" path="res://scripts/player_shot.gd" id="1_pgl2n"]
[ext_resource type="Texture2D" uid="uid://qwgd1oxof03p" path="res://resources/free-pixel-art-enemy-spaceship-2d-sprites/Shot3/shot3_2.png" id="2_e2cst"]
[ext_resource type="Texture2D" uid="uid://cj03bm0r1ojcq" path="res://resources/free-pixel-art-enemy-spaceship-2d-sprites/Shot3/shot3_3.png" id="3_d0xcp"]
[ext_resource type="Texture2D" uid="uid://y3mxrwdj1o6y" path="res://resources/free-pixel-art-enemy-spaceship-2d-sprites/Shot3/shot3_asset.png" id="4_ogy3a"]

[sub_resource type="SpriteFrames" id="SpriteFrames_jpf38"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_d2u57")
}, {
"duration": 1.0,
"texture": ExtResource("2_e2cst")
}, {
"duration": 1.0,
"texture": ExtResource("3_d0xcp")
}, {
"duration": 1.0,
"texture": ExtResource("4_ogy3a")
}],
"loop": false,
"name": &"default",
"speed": 30.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0hyc0"]
size = Vector2(18, 15)

[node name="PlayerShot" type="Area2D"]
script = ExtResource("1_pgl2n")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jpf38")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(10, 1.5)
shape = SubResource("RectangleShape2D_0hyc0")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-42, 0)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
